# Vesc-Dashboard

./: .gitignore  README.md  Vesc_Dashboard.sll  Vesc_Dashboard.spj  platformio.ini
assets/: ui_font_Super73font15.fcfg  ui_font_Super73font25.c  ui_font_Super73font25.fcfg  ui_font_Super73font30.c  ui_font_Super73font30.fcfg  ui_font_Super73font40.c  ui_font_Super73font40.fcfg  ui_font_Super73font50.fcfg  ui_font_Super73font80.fcfg
lib/TFT_eSPI/: User_Setup.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Loading.c  ui_comp_hook.c  ui_events.h  ui_font_Super73font15.c  ui_font_Super73font50.c  ui_font_Super73font80.c  ui_helpers.c  ui_helpers.h  ui_img_super73_png.c
src/: main.cpp
